RESOLVED FIXED163681
[CSS Parser] Fix background-position parsing
https://bugs.webkit.org/show_bug.cgi?id=163681
Summary [CSS Parser] Fix background-position parsing
Dave Hyatt
Reported 2016-10-19 12:16:10 PDT
Make sure to handle the more efficient back-end format that doesn't create unnecessary pairs.
Attachments
Patch (2.59 KB, patch)
2016-10-19 12:18 PDT, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2016-10-19 12:18:36 PDT
Dave Hyatt
Comment 2 2016-10-19 12:22:43 PDT
Fixed in r207556.
Note You need to log in before you can comment on or make changes to this bug.